JBIDE-26469 - Add jdk12 profile
Signed-off-by: Jeff MAURY <jmaury@redhat.com>