@@ -884,6 +884,19 @@ hs_err_pid*.log</jgit.ignore>
 		</profile>
 
 		<profile>
+			<id>jdk12</id>
+			<activation>
+				<jdk>[12</jdk>
+			</activation>
+			<properties>
+				<jdeps-jdk-version>12</jdeps-jdk-version>
+				<jdeps-jdk-vendor>openjdk</jdeps-jdk-vendor>
+				<moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
+				<jacoco.version>0.8.2</jacoco.version>
+			</properties>
+		</profile>
+
+		<profile>
 			<id>jdeps</id>
 			<build>
 				<plugins>
